--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -35,5 +39,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.{ts, tsx, css, json}": [
+      "yarn run lint:fix",
+      "pretty-quick --staged",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
