--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "husky": "^4.3.0",
-    "lint-staged": "^10.3.0"
+    "lint-staged": "^10.3.0",
+    "pretty-quick": "^3.0.2"
   },
   "eslintConfig": {
     "extends": "react-app"
