Remove git add from Husky conf

--- a/package.json
+++ b/package.json
@@ -42,10 +42,9 @@
     ]
   },
   "lint-staged": {
-    "*.{ts, tsx, css, json}": [
+    "*.{ts, tsx, css, json, md}": [
       "yarn run lint:fix",
-      "pretty-quick --staged",
-      "git add"
+      "pretty-quick --staged"
     ]
   },
   "husky": {
