--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint:fix": "eslint ./src --ext .ts,.tsx --fix"
   },
   "devDependencies": {
     "husky": "^4.3.0",
@@ -42,7 +44,7 @@
     ]
   },
   "lint-staged": {
-    "*.{ts, tsx, css, json, md}": [
+    "*.{ts,tsx,css,md}": [
       "yarn run lint:fix",
       "pretty-quick --staged"
     ]
