--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "semantic-ui-react": "^1.2.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -26,6 +29,7 @@
   "devDependencies": {
     "husky": "^4.3.0",
     "lint-staged": "^10.3.0",
+    "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2"
   },
   "eslintConfig": {
@@ -45,6 +49,9 @@
   },
   "lint-staged": {
     "*.{ts,tsx,css,md}": [
+      "pretty-quick --staged"
+    ],
+    "*.{ts,tsx}": [
       "yarn run lint:fix",
       "pretty-quick --staged"
     ]
