--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -52,8 +53,7 @@
       "pretty-quick --staged"
     ],
     "*.{ts,tsx}": [
-      "yarn run lint:fix",
-      "pretty-quick --staged"
+      "yarn run lint:fix"
     ]
   },
   "husky": {
