--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^16.13.1",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "semantic-ui-react": "^1.2.1",
     "typescript": "~3.7.2"
   },
