--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "react-dom": "^16.13.1",
     "react-player": "^2.6.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "3.4.0",
     "semantic-ui-react": "^1.2.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test:coverage": "npm run test -- --coverage --collectCoverageFrom='src/**/*.{ts,tsx}' --watchAll=false --coverageThreshold='{\"global\":{\"statements\":70}}'",
     "eject": "react-scripts eject",
     "lint": "eslint ./src --ext .ts,.tsx",
     "lint:fix": "eslint ./src --ext .ts,.tsx --fix"
@@ -33,10 +34,13 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/testing-library__jest-dom": "^5.9.4",
     "husky": "^4.3.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "lint-staged": "^10.3.0",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2"
+    "pretty-quick": "^3.0.2",
+    "react-test-render": "^1.1.2"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -65,5 +69,12 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "src/index.tsx",
+      "src/serviceWorker.ts",
+      "src/components/contexts"
+    ]
   }
 }
